# bevy_gltf_draco

./: .gitignore  Cargo.toml  LICENSE-MIT
assets/models/CesiumMan/: CesiumMan.gltf
examples/: main.rs
src/: khr_draco_mesh_compression.rs  lib.rs
