[package]
name = "bevy_gltf_draco"
authors = ["jiang heng <https://github.com/jiangheng90/"]
description = "a draco decoder on rust (wip)"
repository = "https://github.com/jiangheng90-opensource/bevy_gltf_draco"
homepage = "https://github.com/jiangheng90-opensource/bevy_gltf_draco"
keywords = ["bevy", "draco", "decoder"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_asset = { path = "../bevy/crates/bevy_asset" }
bevy_platform = { path = "../bevy/crates/bevy_platform" }
bevy_gltf = { path = "../bevy/crates/bevy_gltf" }
bevy_ecs = { path = "../bevy/crates/bevy_ecs" }
bevy_mesh = { path = "../bevy/crates/bevy_mesh" }
bevy_app = { path = "../bevy/crates/bevy_app" }
gltf = { version = "1.4.0", default-features = false, features = [
    "KHR_lights_punctual",
    "KHR_materials_transmission",
    "KHR_materials_ior",
    "KHR_materials_volume",
    "KHR_materials_unlit",
    "KHR_materials_emissive_strength",
    "KHR_texture_transform",
    "extras",
    "extensions",
    "names",
    "utils",
] }
draco_decoder = { version = "0.0.23" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tracing = { version = "0.1", default-features = false, features = ["std"] }

[dev-dependencies]
bevy = { path = "../bevy", features = ["jpeg", "bevy_animation"] }

[[example]]
name = "main"
path = "examples/main.rs"
required-features = []
